--- a/countries/estonia/est_background.html
+++ b/countries/estonia/est_background.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,7 +7,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js">
 	</script>
-	<link rel="stylesheet" href="../../css/index.css" />
+	<link rel="stylesheet" href="css/estonia.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
 
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -102,40 +102,52 @@
   </div>
     </nav>
 
-    <div class='header_pic'>
-	  <img src='../../images/background1.jpg' class='header_image' alt='Dublin'>
-	  <div class='centered'>Background and History</div>
-	 </div>
+<div class='header_pic'>
+	  <img src='images/historybg.jpg' class='header_image' alt='historybg'>
+<div class='centered'>Background &nbsp; and <br>History</div>
+</div>
    
 
    
   <div class='section'>
-	<section id='Food1' class='container'>
-	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Food</h1>
-    <div class="row ">
-    <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
-    </p>
-    </div>
-    <img src='images/food1.jpg' alt='Ireland' class='images col-md-5'>
-    </div>
-    </div>
-     </section>
+	<section class='container'>
+	<div class="container content border border-1 border-dark">
+      <h1 class="text-center">Background</h1>
+  <div class="row ">
+  <div class='text text-center'>
+    <br><p>Dating back to as early as the 13th century Estonia has been under the control of many countries including Denmark, Sweden, Germany, Poland and of course Russia. On the 24th of February 1918 Estonia declared itself an independent and democratic state. 
+    </p><br>
+
+     <a href="http://raeapteek.ee/en/">
+  <img src="images/3.jpg" alt="3" style="width:60%;">
+</a>
+<br><br>
+The Raeapteek Pharmacy is one of the oldest running pharmacies in Europe. Next year will mark it being open for 600 years! 
+<br><br>Click on the above image to be redirected to the pharmacy's website.
+</div>
+</div>
+<br><br>
+</div>
+</section>
   </div>
-    	<section id='Food2' class='container'>
-	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Estonia</h1>
-    <div class="row">
-    <img src='images/food2.jpg' alt='Food2' class='images col-md-5'>
-    <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
-    </p>
-    </div>
-    
-    </div>
-    </div>
+
+
+      <section class='container'>
+<div class="container content border border-1 border-dark">
+      <h1 class="text-center">History</h1>
+<div class="row"><br>
+     <p>Whilst Russia was in power everything Estonian or anti Soviet Union was censored. You were put in jail if you had an Estonian flag and children weren't even allow to draw it. Everything had to be approved by Russia, even song lyrics. The song below was translated into Russian as "What will we bring to the birthday?, Of course we'll bring, bring, bring". However the word 'viin' that means bring has two meanings, the other is 'vodka'. Quickly this song became a hit as it passed the Russian check. <br><br><br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/TDZYKhsFtsE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br><br>
+    However, Estonia achieved real independence on the 20th of August 1991 after the Soviet Union declared so. 
+     <br><br>
+     On May 1st 2004 Estonia joined the European Union.
+     </p>
+</div>
+</div>
      </section>
+
+    
 
     <!-- And here is our main footer that is used across all the pages of our website -->
   <div class='footer'>
@@ -148,6 +160,8 @@
           <span>&middot;</span>
           <span>Lecturer: <a href="http://www.computing.dcu.ie/~jkernan">Jane Kernan</a></span> 
           <span>&middot;</span> 
+          <span><a href="../../contact_us.html" >Contact Us</a></span>
+          <span>&middot;</span>
           <span><a href="http://validator.w3.org/check?uri=referer" title="W3C HTML Validation Service" >Valid HTML</a><br/></span> 
       </p>
       </footer>
