--- a/countries/estonia/est_clothes.html
+++ b/countries/estonia/est_clothes.html
@@ -7,7 +7,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js">
 	</script>
-	<link rel="stylesheet" href="../../css/index.css" />
+	<link rel="stylesheet" href="css/estonia.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
 
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -104,36 +104,38 @@
 
     <div class='header_pic'>
 	  <img src='images/bg2.jpg' class='header_image' alt='bg2'>
-	  <div class='centered'>Traditional &nbsp; Clothing and Dance <br> Estonia</div>
+	  <div class='centered'>Traditional Clothing and Dance</div>
 	 </div>
    
 
    
   <div class='section'>
-	<section id='Food1' class='container'>
+	<section class='container'>
 	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Food</h1>
+      <h1 class="text-center">Clothing</h1>
     <div class="row ">
-    <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
+    <div class='text text-center'>
+    <p>Traditional Estonian clothing is very colourful. Women wear bright stripey skirts with a white balloon-sleeve shirt and men wear the same type of shirt paired with a waistcoat. All of the stripes on the skirts have different meanings and correspond to a location or certain area in Estonia. Women typically wear headscarves or flower headpieces whilst men would accessorize with a top hat. 
+
     </p>
+<img src='images/clothes.jpg' alt='clothes'  class='images col-md-5'>
+<img src='images/clothes2.jpg' alt='clothes2'  class='images col-md-5'>
+
     </div>
-    <img src='images/food1.jpg' alt='Ireland' class='images col-md-5'>
     </div>
     </div>
      </section>
   </div>
-    	<section id='Food2' class='container'>
+
+    	<section class='container'>
 	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Estonia</h1>
+      <h1 class="text-center">Dance</h1>
     <div class="row">
-    <img src='images/food2.jpg' alt='Food2' class='images col-md-5'>
-    <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
+    <p>In the 2019 Tallinn Song and Dance Festival, 43,802 people performed. The next festival will be held in 2022. Every female is paired to a male for the dances. Swinging, turns and jumps are all parts of the dances. 
     </p>
     </div>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/aueKvNSN4LU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
-    </div>
     </div>
      </section>
 
@@ -147,6 +149,8 @@
           <span>This is student coursework</span> 
           <span>&middot;</span>
           <span>Lecturer: <a href="http://www.computing.dcu.ie/~jkernan">Jane Kernan</a></span> 
+          <span>&middot;</span>
+          <span><a href="../../contact_us.html" >Contact Us</a></span>
           <span>&middot;</span> 
           <span><a href="http://validator.w3.org/check?uri=referer" title="W3C HTML Validation Service" >Valid HTML</a><br/></span> 
       </p>
