--- a/countries/india/ind_background.html
+++ b/countries/india/ind_background.html
@@ -21,7 +21,7 @@
 
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -121,7 +121,7 @@
       
     </div>
 
-    <img src='images/history.jpg' alt='history' class='images col-md-5'>
+    <img src='images/history.png' alt='history' class='images col-md-5'>
     </div>
     </div>
      </section>
