--- a/countries/india/ind_index.html
+++ b/countries/india/ind_index.html
@@ -21,7 +21,7 @@
 
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -118,7 +118,9 @@
       <br>
       <br>
       <br>
-    <p>Waffle cloth is a woven fabric that has a recessed pattern created by cords running vertically and horizontally that make a square design. Waffle weave is very absorbent and it also allows air to flow through so it dries quickly. It's ideal for anything where absorbency is needed, such as towels, aprons, bath robes and slippers. This is an innately practical fabric that has had it's popularity renewed in recent years by prominent clothes designers.</p>
+      <br>
+      <br>
+      <p>A country that has never invaded any other country in her last 100000 years of history; its name derived from the River Indus, the land is known as India, and it's the 7th largest country in the world to date, where cows are considered sacred and have the highest rail bridge in the world, called Chenab Bridge.</p>
     </div>
     <img src='images/index.jpg' alt='India' class='images col-md-5'>
     </div>
