--- a/countries/ireland/ire_index.html
+++ b/countries/ireland/ire_index.html
@@ -3,9 +3,13 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Ireland</title>
-	<link rel="stylesheet" type="text/css" href="css/index.css"/>
-  	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>CA106 Group AA</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js">
+
+	</script>
+	<link rel="stylesheet" href="css/ireland.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,12 +17,13 @@
 
 </head>
 
+
 <body>
 	<!-- Here is our main header that is used across all the pages of our website -->
 
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -32,11 +37,102 @@
       <li><a class="dropdown-item" href="../ireland/ire_food.html">Food</a></li>
     </ul>
   </div>
-	 		<figure id="images" class="intro">
-	 	<img src="images/images/flag-of-ireland.jpg" alt="Flag of Ireland" width="350" height="250">
-	    </figure>
+  <div class="dropdown">
+    <button class="btn btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton2"
+      data-bs-toggle="dropdown" aria-expanded="false">
+      Estonia
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+      <li><a class="dropdown-item" href="../estonia/est_index.html">Home</a></li>
+      <li><a class="dropdown-item" href="../estonia/est_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../estonia/est_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../estonia/est_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../estonia/est_food.html">Food</a></li>
+    </ul>
+  </div>
+  <div class="dropdown">
+    <button class="btn btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton3"
+      data-bs-toggle="dropdown" aria-expanded="false">
+      Romania
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
+      <li><a class="dropdown-item" href="../romania/ro_index.html">Home</a></li>
+      <li><a class="dropdown-item" href="../romania/ro_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../romania/ro_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../romania/ro_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../romania/ro_food.html">Food</a></li>
+    </ul>
+  </div>
+  <div class="dropdown">
+    <button class="btn btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton4"
+      data-bs-toggle="dropdown" aria-expanded="false">
+      Moldova
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton4">
+      <li><a class="dropdown-item" href="../moldova/mo_index.html">Home</a></li>
+      <li><a class="dropdown-item" href="../moldova/mo_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../moldova/mo_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../moldova/mo_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../moldova/mo_food.html">Food</a></li>
+    </ul>
+  </div>
+  <div class="dropdown">
+    <button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton5"
+      data-bs-toggle="dropdown" aria-expanded="false">
+      Nigeria
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton5">
+      <li><a class="dropdown-item" href="../nigeria/ni_index.html">Home</a></li>
+      <li><a class="dropdown-item" href="../nigeria/ni_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../nigeria/ni_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../nigeria/ni_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../nigeria/ni_food.html">Food</a></li>
+    </ul>
+  </div>
+  <div class="dropdown">
+    <button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton6"
+      data-bs-toggle="dropdown" aria-expanded="false">
+      India
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton6">
+      <li><a class="dropdown-item" href="../india/ind_index.html">Home</a></li>
+      <li><a class="dropdown-item" href="../india/ind_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../india/ind_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../india/ind_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../india/ind_food.html">Food</a></li>
+    </ul>
+  </div>
+    </nav>
 
+    <div class='header_pic'>
+	  <img src='images/images/flag-of-ireland.jpg' class='header_image' alt='Irish Flag'>
+	  <div class='centered'>Introduction <br> of<br>Ireland </div>
+	 </div>
 
+   <br>
+
+<div class="intro">
+<h2>Introduction</h2>
+<p>
+  Ireland is located on the west side of Europe right beside the UK on its west side. Its population is just shy of 5 million people with numbers still rising ever since the end of the famine. The native language in Ireland is Irish although it is on the decline with English being the main language spoken for some time. Ireland is mainly a christian country but there are many other religions that are practised in Ireland.
+</p>
+<div class="anthem">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/OetAvMnzO_k" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+</div>
+<br>
+<div class="facts">
+<h4>Facts about Ireland</h4>
+
+  <div class="list">
+  <ul>
+    <li>Guinness originated in Ireland and when starting was granted a 9000 year lease</li>
+    <li>The official language in Ireland is Irish</li>
+    <li>The population is 4.9 million</li>
+    <li>Ireland has won the Eurovision song contest 7 times. The most of any country.</li>
+  </ul>
+  </div>
+</div>
 
     <!-- And here is our main footer that is used across all the pages of our website -->
   <div class='footer'>
