--- a/countries/romania/ro_food.html
+++ b/countries/romania/ro_food.html
@@ -22,7 +22,7 @@
 
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -105,32 +105,35 @@
 
     <div class='header_pic'>
 	  <img src='images/ro.jpg' class='header_image' alt='Dublin'>
-	  <div class='centered'>Romania</div>
+	  <div class='centered'>Romania
+      <br>
+      Food
+    </div>
 	 </div>
    
 
    
   <div class='section'>
-	<section id='Food1' class='container'>
+	<section class='container'>
 	   <div class="container content border border-1 border-dark">
       <h1 class="text-center">Food</h1>
     <div class="row ">
     <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
+    <p>The most iconic food found at every Romanian event is called “sarmale”. <br> <br> These are boiled rolls of fermented cabbage or grape vine leaves with a mixture of minced meat (typically pork and chicken). The rolls are boiled in a special sauce of sauerkraut water, tomato juice and other spices and herbs. This is a very key traditional Romanian food that has been around for a very long time. The “sarmale” are typically served with another iconic Romanian peasant food (mămăligă) and sour cream.
     </p>
     </div>
-    <img src='images/food1.jpg' alt='Ireland' class='images col-md-5'>
+    <img src='images/sarmale.jpg' title="Romanian Food" alt='Romanian Food' class= 'images col-md-5' style="">
     </div>
     </div>
      </section>
   </div>
     	<section id='Food2' class='container'>
 	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Estonia</h1>
+      <h1 class="text-center">Food Cont.</h1>
     <div class="row">
-    <img src='images/food2.jpg' alt='Food2' class='images col-md-5'>
-    <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
+    <img src='images/mamaliga.jpg' title="Romanian Food" alt="Mamaliga" class='images img-fluid center '>
+    <div class='text text-center'>
+    <p>Mămăligă is the traditional Romanian peasant version of bread. Due to a strict rationing of food ingredients such as wheat and flour during the communist regime, bread was seen as more of a luxury. Romanian peasants quickly turned to a very old dish known as mămăligă to substitute for the lack of bread. Since this, mămăligă has become iconic and loved by the Romanian people. Mămăligă can be recognised as the Italian polenta in Europe, although the recipe is not exactly the same. Mămăligă is essentially a high moisture corn flour bread, which is made without baking (only boiled). They tend to be quite heavily salted and when fresh, are very soft and can be quite fluffy. 
     </p>
     </div>
     
@@ -149,6 +152,8 @@
           <span>&middot;</span>
           <span>Lecturer: <a href="http://www.computing.dcu.ie/~jkernan">Jane Kernan</a></span> 
           <span>&middot;</span> 
+          <span><a href="../../contact_us.html" >Contact Us</a></span>
+          <span>&middot;</span>
           <span><a href="http://validator.w3.org/check?uri=referer" title="W3C HTML Validation Service" >Valid HTML</a><br/></span> 
       </p>
       </footer>
