--- a/countries/romania/ro_traditions.html
+++ b/countries/romania/ro_traditions.html
@@ -22,7 +22,7 @@
 
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -105,33 +105,49 @@
 
     <div class='header_pic'>
 	  <img src='images/ro.jpg' class='header_image' alt='Dublin'>
-	  <div class='centered'>Romania</div>
+	  <div class='centered'>Romania <br>
+    Traditions and Customs</div>
 	 </div>
    
 
    
   <div class='section'>
-	<section id='Food1' class='container'>
+	<section id='Traditions' class='container'>
 	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Food</h1>
+      <h1 class="text-center">Traditions</h1>
     <div class="row ">
     <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
-    </p>
+    <p>Romania is a majority Eastern Orthodox Christian country. Celebrations in Romania are largely based around Christian Orthodoxy, important dates being Easter and Saint days (which are considered, to many, to be more important than birthdays as a celebration). <br> <br>
+
+<ul> <li> Due to the repressive communist opposition, western holidays such as Christmas and Halloween have only recently become commonly celebrated and popular. </ul>
+
+There are numerous traditions and customs associated with Romania which are very uncommon in the west. 
+
+For example, in Romania, it is very rare for there to not be an open casket wake. In fact, more so than that, according to Romanian tradition, a person must be in the room with the deceased at all times. This commonly means people going 24 hours or more with little to no sleep. <br> <br>
+
+Easter is arguably the biggest traditional celebration in Romanian culture. Around Easter, there are many unique customs. In Ireland, we share and eat chocolate eggs. <br> <br>
+
+<ul> <li> However, in Romania, real eggs are boiled, dyed and decorated at Easter time. </ul>
+
+
     </div>
-    <img src='images/food1.jpg' alt='Ireland' class='images col-md-5'>
+    <img src='images/easter.jpg' title="Romanian Easter Eggs" alt='Romanian Easter' class='images col-md-6'>
     </div>
     </div>
      </section>
   </div>
-    	<section id='Food2' class='container'>
+    	<section id='Customs' class='container'>
 	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Estonia</h1>
+      <h1 class="text-center">Customs</h1>
     <div class="row">
-    <img src='images/food2.jpg' alt='Food2' class='images col-md-5'>
+    <img src='images/customs.jpg' title="Romanian Customs" alt='Customs' class='images col-md-5'>
     <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
-    </p>
+    <p>Any tradition or custom which embraced or resembled anything akin to western consumerism was not welcomed by the communist government, which did not believe in private ownership of anything. </p>
+
+<p>While the communists were not fans of religion and definitely did not promote it, the Romanian communist regime under Nicolae Ceaușescu did allow freedom of religion and the Orthodox church to exist. Atheism was however promoted and taught in schools and colleges to Romanians from a young age during the communist regime. </p>
+
+<p>Astrology is a very seriously treated and important tradition in Romania. I believe that this is the case because of the communist government attempting to drive people away from religion and that they promoted astrology as a method of swerving any remaining power or authority away from the Christian Orthodox Church in Romania.</p>
+
     </div>
     
     </div>
@@ -149,6 +165,8 @@
           <span>&middot;</span>
           <span>Lecturer: <a href="http://www.computing.dcu.ie/~jkernan">Jane Kernan</a></span> 
           <span>&middot;</span> 
+          <span><a href="../../contact_us.html" >Contact Us</a></span>
+          <span>&middot;</span>
           <span><a href="http://validator.w3.org/check?uri=referer" title="W3C HTML Validation Service" >Valid HTML</a><br/></span> 
       </p>
       </footer>
