--- a/countries/estonia/est_food.html
+++ b/countries/estonia/est_food.html
@@ -7,7 +7,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js">
 	</script>
-	<link rel="stylesheet" href="../../css/index.css" />
+	<link rel="stylesheet" href="css/estonia.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
 
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -110,7 +110,7 @@
 
    
   <div class='section'>
-	<section id='food1' class='container'>
+	<section class='container'>
 	   <div class="container content border border-1 border-dark">
       <h1 class="text-center">Christmas Dinner</h1>
     <div class="row ">
@@ -124,15 +124,17 @@
      </section>
   </div>
 
-    	<section id='food2' class='container'>
+    	<section class='container'>
 	   <div class="container content border border-1 border-dark">
       <h1 class="text-center">Potato Salad</h1>
     <div class="row">
     <img src='images/food2.jpg' alt='food2' class='images col-md-5'>
     <div class='text col-md-6 text-center'>
-    <br><br><p>Potato salad is one of the most typical Estonian foods. It is found on every table no matter the occasion. It mainly consists of boiled potatoes, cucumber, pickles, apples, egg, peas, meat, mayonaise and creme freiche.
+    <br><p>Potato salad is one of the most typical Estonian foods. It is found on every table no matter the occasion. It mainly consists of boiled potatoes, cucumber, pickles, apples, egg, peas, meat, mayonaise and creme freiche.
     <br><br>
      Rosolje is the beetroot equivalent. The texture is the same but after being left for a few hours the beetroot stains the salad and gives it a beautiful pink colour.
+<br><br>
+     You can click <a target="_blank" href="https://nami--nami-ee.translate.goog/retsept/5240/kartulisalat?_x_tr_sl=et&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=sc"><u>here</u></a> to be redirected to a recipe for potato salad.
     </p>
     </div>
     </div>
@@ -182,6 +184,8 @@
           <span>&middot;</span>
           <span>Lecturer: <a href="http://www.computing.dcu.ie/~jkernan">Jane Kernan</a></span> 
           <span>&middot;</span> 
+          <span><a href="../../contact_us.html" >Contact Us</a></span>
+          <span>&middot;</span>
           <span><a href="http://validator.w3.org/check?uri=referer" title="W3C HTML Validation Service" >Valid HTML</a><br/></span> 
       </p>
       </footer>
