--- a/countries/estonia/est_index.html
+++ b/countries/estonia/est_index.html
@@ -7,7 +7,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js">
 	</script>
-	<link rel="stylesheet" href="../../css/index.css" />
+	<link rel="stylesheet" href="css/estonia.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
 
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -106,36 +106,58 @@
 	  <img src='images/pic2.jpg' class='header_image' alt='Dublin'>
 	  <div class='centered'>Estonia</div>
 	 </div>
+
+
+<div class='header_pic'>
+	  <img src='images/flag.jpg' class='header_image' alt='estonia'>
+	  <div class='centered'>Estonia</div>
+	 </div>
    
 
-   
+   <br>
   <div class='section'>
-	<section id='Food1' class='container'>
+	<section class='container'>
 	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Food</h1>
-    <div class="row ">
-    <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
-    </p>
+      <h1 class="text-center">Introduction</h1>
+    <div class='text col-md-10 text-center'>
+    <p><br>Estonia is one of the three Baltic countries in Europe. It has 2222 islands. It is a fairly flat country with its mean elevation being only 50m above sea level. Suur Munamagi (Great Egg Hill) is the highest point in Estonia at 318 metres high. The longest river, the Parnu, is 145km long.
+    <br><br>
+    Less than 70% of all residents are Estonian. Russians make up the next majority at nearly 25% and the rest of the population involves Ukrainians, Belorussians and Finnish people.
+    </p><br>
+<img src='images/map.jpg' alt='map'  class='images col-md-10'>
     </div>
-    <img src='images/food1.jpg' alt='Ireland' class='images col-md-5'>
     </div>
-    </div>
-     </section>
+    </section>
   </div>
-    	<section id='Food2' class='container'>
+
+    	<section class='container'>
 	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Estonia</h1>
-    <div class="row">
-    <img src='images/food2.jpg' alt='Food2' class='images col-md-5'>
-    <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
-    </p>
-    </div>
-    
-    </div>
+      <h1 class="text-center">Interesting Facts</h1>
+    <div class='text col-md-10 text-center'>
+    <ul>
+      <li>There is a law that states you must wear safety reflectors when it i dark outside. Fines for failure to do so are up to €400.</li>
+       <li>Although Tallinn is the official capital, Pärnu is refered to as the summer capital, Otepää is the winter capital and Tartu the university and spiritual capital.</li>
+     <li>If you live in Estonia's capital Tallinn all public transport is free to use.</li>
+     <li>All third level education is free if learning through Estonian.</li>
+       <li>On the largest island Saaremaa there is a football pitch with an oak tree in the center of it. Games are played around it.</li>
+        <li>Ice roads are formed during the winter that join the islands to the mainland. These are available to drive over during the cold months.</li>
+        <li>In Estonia, cars drive on the right hand side of the road.</li>
+    </ul>
+    </div>   
     </div>
      </section>
+
+    <div class='section'>
+	<section class='container'>
+	   <div class="container content border border-1 border-dark">
+      <h2 class="text-center">The National Anthem</h2>
+    <div class='text col-md-10 text-center'>
+     <br>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/vGpdbgf26t8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
+	</section>
+  </div>
 
     <!-- And here is our main footer that is used across all the pages of our website -->
   <div class='footer'>
@@ -148,6 +170,8 @@
           <span>&middot;</span>
           <span>Lecturer: <a href="http://www.computing.dcu.ie/~jkernan">Jane Kernan</a></span> 
           <span>&middot;</span> 
+          <span><a href="../../contact_us.html" >Contact Us</a></span>
+          <span>&middot;</span>
           <span><a href="http://validator.w3.org/check?uri=referer" title="W3C HTML Validation Service" >Valid HTML</a><br/></span> 
       </p>
       </footer>
