--- a/countries/estonia/est_traditions.html
+++ b/countries/estonia/est_traditions.html
@@ -7,7 +7,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js">
 	</script>
-	<link rel="stylesheet" href="../../css/index.css" />
+	<link rel="stylesheet" href="css/estonia.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
 
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -103,37 +103,66 @@
     </nav>
 
     <div class='header_pic'>
-	  <img src='images/pic2.jpg' class='header_image' alt='Dublin'>
-	  <div class='centered'>Our &nbsp; Cultures</div>
+	  <img src='images/traditionsbg.jpg' class='header_image' alt='traditionsbg'>
+	  <div class='centered'>Traditions &nbsp; and <br> Customs</div>
 	 </div>
    
 
    
   <div class='section'>
-	<section id='Food1' class='container'>
+	<section id='midsummer' class='container'>
 	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Food</h1>
+      <h1 class="text-center">Midsummer's Day</h1>
     <div class="row ">
     <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
+    <p><br>Midsummer's Eve  ("Jaanilaupäev")  is a big celebration in Estonia. It is celebrated on the 23rd of June, the longest day of the year. Traditionally it signified light winning over darkness. Nowadays, a big feast is eaten and bonfires are lit. Sometimes people jump over them if they aren't too big. 
     </p>
     </div>
-    <img src='images/food1.jpg' alt='Ireland' class='images col-md-5'>
+    <img src='images/traditions.jpg' alt='traditions' class='images col-md-5'>
     </div>
     </div>
      </section>
   </div>
-    	<section id='Food2' class='container'>
+
+  
+    	<section id='traditions2' class='container'>
 	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Estonia</h1>
+      <h1 class="text-center">Song Festival</h1>
     <div class="row">
-    <img src='images/food2.jpg' alt='Food2' class='images col-md-5'>
+    <img src='images/traditions2.jpg' alt='traditions2' class='images col-md-5'>
     <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
+    <p><br>Every 5 years in the month of July, around 100,000 people come to watch a choir of 30,000 sing. The first 'Laulupidu'or Song Festival was held back in 1869 with only 845 participants. Estonia has one of the largest collections of folk songs in the world at roughly 133,000. 
     </p>
     </div>
     
     </div>
+    </div>
+     </section>
+ <div class='section'>
+	<section id='traditions3' class='container'>
+	   <div class="container content border border-1 border-dark">
+      <h1 class="text-center">Sauna</h1>
+    <div class="row ">
+    <div class='text col-md-6 text-center'><br><br>
+    <p>Saunas have always been an essential part of Estonian culture. After warming up and cleaning yourself it would be very common to dive into a lake or take a dip in an ice hole.  Apartments would even have saunas buit in usually connected to the kitchen or bathrooms. Smoke saunas are very popular too.
+    </p>
+    </div>
+    <img src='images/traditions3.jpg' alt='traditions3' class='images col-md-5'>
+    </div>
+    </div>
+     </section>
+  </div>
+    	<section id='traditions4' class='container'>
+	   <div class="container content border border-1 border-dark">
+      <h1 class="text-center">Christmas Market</h1>
+    <div class="row">
+  
+    <div class='text text-center'><br>
+    <p>The Christmas Market takes place every winter in the main square 'Raekojaplats' in the centre of the Old Town Tallinn. People sell everything from woolly gloves to mulled wine and gingerbread. A decorated christmas tree is always in the very middle of the square.<br><br>
+    </p>
+    </div>
+    </div>
+     <img src='images/traditions4.jpg' alt='traditions4' class='images col-md-8'>
     </div>
      </section>
 
@@ -147,6 +176,8 @@
           <span>This is student coursework</span> 
           <span>&middot;</span>
           <span>Lecturer: <a href="http://www.computing.dcu.ie/~jkernan">Jane Kernan</a></span> 
+          <span>&middot;</span>
+          <span><a href="../../contact_us.html" >Contact Us</a></span>
           <span>&middot;</span> 
           <span><a href="http://validator.w3.org/check?uri=referer" title="W3C HTML Validation Service" >Valid HTML</a><br/></span> 
       </p>
