--- a/countries/india/ind_clothes.html
+++ b/countries/india/ind_clothes.html
@@ -18,10 +18,9 @@
 
 <body>
 	<!-- Here is our main header that is used across all the pages of our website -->
-
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -115,11 +114,16 @@
       <h1 class="text-center">Women's Clothes</h1>
     <div class="row ">
     <div class='text col-md-6 text-center'>
-    <p> There are different traditional outfits, but we will only be going through the main key ones. </p>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <p>There are different traditional outfits, but we will only be going through the main key ones. </p>
 
-    <p>-The Indian Saree is a traditional dress for Indian women. It comprises one piece of fabric that is five to nine yards long and two to four feet wide. The material is wrapped in a variety of ways depending on the occasion. The fabric is commonly wrapped around the waist while the other end is draped over the shoulder such that the midriff is left bare. The garment’s history is traced back to as early as the Indus Valley Civilization. Indian people preferred to wrap themselves with cotton fabrics due to their flexibility and the hot climate. The garment has evolved, and it is worn by an estimated 75% of Indian women every day.</p>
-    <p>-The cradle of the Lehenga Choli is in the regions of Gujarat, Rajasthan, and Kutch. The dress is a long, cut and flared skirt. The skirt is paired with the choli, a blouse tightly fitted at the waist. The garment is made in various colours and shades, and its design heavily borrows from the Mogul culture. The outfit is characterized by intricate and exquisite embroidery, and it is most commonly worn at weddings and festivals. The lehenga choli is often accompanied by a chunri that is a long piece of bright and colourful cloth, often bordered with lace, wrapped around the head and trails down the back, similar to a veil worn in Chrisitan weddings.</p>
-    <p>-The Salwar Kameez and Churidar ensemble started as comfortable and decent wear for Indian women in Punjab and Kashmir. It is today one of the most commonly worn female dresses among the traditional dresses in India. The outfit consists of pyjama-like trousers called salwar, which is made tight at the waist and ankles. A kameez, which is a long and loose-fitting dress, is worn over the salwar. A churidar may be worn in place of the salwar and fits more tightly at the waist, hips and ankles. Through the use of appealing designs, embroidery, and textures, fashion designers have made this outfit incredibly popular in India.</p>
+      <p>In Sanskrit, the word  ' sari ' means ' strip of cloth '. It is a traditional dress for women in India. The ' strip of cloth ' is usually 4.5 to 9 metres. There are a variety of ways to wrap the cloth. Usually, it's wrapped around the waist a couple of times before getting draped over the shoulder. The earliest a sari has been worn in history is as early as the Indus Valley civilization. Due to their hot climate and need for flexibility, Indian women prefer sari made of cotton. Nearly 75% of Indian women wear a sari every day.</p>
+      <p>Lehenga Choli's origins go back to Gujarat, a state in India located in the northwest of India. The outfit consists of a long skirt paired with choli and a blouse fitted at the waist. It is usually made with very bright colours; its designs date back to the Mogul Culture. The outfit is mainly worn at weddings and festivals. It is often accompanied by a chunri, a long transparent cloth bordered with lace, similar to a veil.</p>
+      <p>Salwar Kameez/ churidar originated in Punjab and Kashmir as a more comfortable choice of wear for Indian women. It is the most commonly worn female dress in India due to its comfort. The outfit is compared to salwar trousers, which is tight at the ankles. Salwar can be paired with a kameez, a long loose dress worn over the salwar. A churidar may be worn if needed. </p>
     </div>
     <img src='images/womendress.png' alt='womens clothes' class='images col-md-5'>
     </div>
@@ -130,10 +134,15 @@
 	   <div class="container content border border-1 border-dark">
       <h1 class="text-center"> Men's Clothes</h1>
     <div class="row">
-    <img src='images/menclothes.jpg' alt='mens clothes' class='images col-md-5'>
+    <img src='images/men.png' alt='mens clothes' class='images col-md-5'>
     <div class='text col-md-6 text-center'>
-    <p>    <p>-Dhoti garment is the traditional dress for Indian men. The dhoti is a long unstitched garment, mostly 5 yards in length. The clothing is tied at the waist and ankles, with a knot at the waist. The dhoti is mainly paired with the kurta, the combination known as dhoti kurta in eastern India. The dhoti is also paired with an angavastram in the south. The ensemble is regarded as formal and informal wear and has evolved to become an elegant cultural symbol. The famous Indian freedom fighter Mahatma Gandhi always wore a dhoti on all public occasions, popularizing this attire beyond the Indian borders.</p>
-    <p>-Achkan is a traditional knee-length jacket worn in India. The garment was medieval court wear for men, and it has evolved to become contemporary wear. The Achkan has a frontal opening and side openings, which were traditionally tied with strings. Achkan incorporates Indian embroidery, and it is mainly won with either churidar or dhoti. The garment is used for formal and informal settings, although it is commonly seen in weddings and other celebrations.</p>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+    <p>A garment traditionally worn by men at home is known as Dhoti. It is a long garment, around 4.5 metres, tired with a knot at the waist and usually paired with a kurta. In the south, Dhoti can also pair it with angavastram. Dhotis are used in both formal and informal wear. Mahatma Gandhi wore a dhoti to public occasions and popularized the outfit.</p>
+    <p>Achkan is a traditional jacket usually stretched down to the knees. It is the outfit they are required to wear for medieval court for men, but it was involved into more of casual wear. It usually had a front and side opening which was tied by strings. It is mainly worn over a churidar or Dhoti. This outfit is also used in the formal and informal environment, although it is more commonly seen in weddings.</p>
     
     </div>
     
