--- a/countries/ireland/ire_food.html
+++ b/countries/ireland/ire_food.html
@@ -3,9 +3,13 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Irish food</title>
-	<link rel="stylesheet" type="text/css" href="css/irish-food.css"/>
-  	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>CA106 Group AA</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js">
+
+	</script>
+	<link rel="stylesheet" href="css/food.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,9 +17,102 @@
 
 </head>
 
+<body>
+	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
+		<ul class="navbar-nav my-2"></ul>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<div class="dropdown">
+			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
+      data-bs-toggle="dropdown" aria-expanded="false">
+      Ireland
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+      <li><a class="dropdown-item" href="../ireland/ire_index.html">Home</a></li>
+      <li><a class="dropdown-item" href="../ireland/ire_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../ireland/ire_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../ireland/ire_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../ireland/ire_food.html">Food</a></li>
+    </ul>
+  </div>
+  <div class="dropdown">
+    <button class="btn btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton2"
+      data-bs-toggle="dropdown" aria-expanded="false">
+      Estonia
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+      <li><a class="dropdown-item" href="../estonia/est_index.html">Home</a></li>
+      <li><a class="dropdown-item" href="../estonia/est_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../estonia/est_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../estonia/est_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../estonia/est_food.html">Food</a></li>
+    </ul>
+  </div>
+  <div class="dropdown">
+    <button class="btn btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton3"
+      data-bs-toggle="dropdown" aria-expanded="false">
+      Romania
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
+      <li><a class="dropdown-item" href="../romania/ro_index.html">Home</a></li>
+      <li><a class="dropdown-item" href="../romania/ro_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../romania/ro_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../romania/ro_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../romania/ro_food.html">Food</a></li>
+    </ul>
+  </div>
+  <div class="dropdown">
+    <button class="btn btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton4"
+      data-bs-toggle="dropdown" aria-expanded="false">
+      Moldova
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton4">
+      <li><a class="dropdown-item" href="../moldova/mo_index.html">Home</a></li>
+      <li><a class="dropdown-item" href="../moldova/mo_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../moldova/mo_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../moldova/mo_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../moldova/mo_food.html">Food</a></li>
+    </ul>
+  </div>
+  <div class="dropdown">
+    <button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton5"
+      data-bs-toggle="dropdown" aria-expanded="false">
+      Nigeria
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton5">
+      <li><a class="dropdown-item" href="../nigeria/ni_index.html">Home</a></li>
+      <li><a class="dropdown-item" href="../nigeria/ni_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../nigeria/ni_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../nigeria/ni_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../nigeria/ni_food.html">Food</a></li>
+    </ul>
+  </div>
+  <div class="dropdown">
+    <button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton6"
+      data-bs-toggle="dropdown" aria-expanded="false">
+      India
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton6">
+      <li><a class="dropdown-item" href="../india/ind_index.html">Home</a></li>
+      <li><a class="dropdown-item" href="../india/ind_background.html">Background/History</a></li>
+      <li><a class="dropdown-item" href="../india/ind_traditions.html">Traditions/Customs</a></li>
+      <li><a class="dropdown-item" href="../india/ind_clothes.html">Clothing/Dances</a></li>
+      <li><a class="dropdown-item" href="../india/ind_food.html">Food</a></li>
+    </ul>
+  </div>
+    </nav>
+
+    <div class='header_pic'>
+	  <img src='images/images/flag-of-ireland.jpg' class='header_image' alt='Irish Flag'>
+	  <div class='centered'>Irish food <br> in <br> Ireland </div>
+	 </div>
+
+   <br>
+
 	   <section id="food" class="food">
 	   	<h2>Irish Food</h2>
-	   	<div class="irish-stew">
+       <br>
+	   	<div class="irishstew">
+         <h4> Irish Stew </h4>
 	   		<p>
 	   			
 Stew became popular in Ireland around the 19th century and with how easy it was to make quickly became the no.1 dish as even the poor could easily make it and survive off of it. Traditionally the stew was made with mutton or lamb and is why it is different to normal stew. Mutton was used as sheep were kept until old age for milk and wool that their meat would have gotten so tough that stewing it was the only way to make it edible. The stew would then contain only two other ingredients, usually onions and potatoes. Families who were lucky enough would be able to have goat or lamb with carrots or turnips. The dish is still very much a part of modern Ireland and many families enjoy this meal.
@@ -23,25 +120,40 @@ Stew became popular in Ireland around the 19th century and with how easy it was 
 	   		</p>
 	   	</div>
 	   	<div class="coddle">
+         <h4> Coddle </h4>
 	   		<p>
 	   			Coddle is a traditional Irish winter meal. Sometimes called Dublin coddle it would also be enjoyed with some bread as with the dish there is a lot of excess juice. A coddle would be made with any leftovers and all put into one pot. It would mainly consist of potatoes, onions and sausages and whatever else you had one hand. Coddle means to cook right below boiling point and hence is how the meal is prepared. Coddle dates back to the 1700s during the famine and would be eaten on a Thursday as Catholics wouldn't eat meat on Friday. As the dish was so simple to make and work with nearly anything on hand it became a staple meal in Ireland.
-	   		</p>
 	   	</div>
-	   	<div class="irish-breakfast">
+	   	<div class="irishbreakfast">
+         <h4> Irish Breakfast </h4>
 	   		<p>
 	   			Commonly known as a fry or full Irish the Irish breakfast is a meal every Irish person has had at least once in their life. The meal can be cooked from one pan with a healthy serving of butter. The ingredients are rasher, eggs, sausages, black and white pudding, mushrooms, tomatoes, beans, fried potatoes served with tea or coffee or juice. Usually, all this would be served on a plate to enjoy but in recent years putting all those ingredients into a roll to enjoy became a tradition that can be bought in many shops all around Ireland which even led to a song called “Jumbo Breakfast Roll” being made about it. 
 	   		</p>
-	   		<figure id="images" class="irish-breakfast">
+	   	</div>
+       <div class="foodimages">
+         <h4> Food images </h4>
+	   		<figure id="images" class="irishfood">
 	   			<img src="images/images/irish-stew.jpg" alt="irish-stew" width="350" height="300">
-	   		</figure>
-	   		<figure id="images" class="coddle">
-	   			<img src="images/images/coddle.jpg" alt="Coddle" width="350" height="300">
-	   		</figure>
-	   		<figure id="images" class="irish-breakfast">
-	   			<img src="images/images/irish-breakfast.jpg"
+           <img src="images/images/coddle.jpg" alt="Coddle" width="350" height="300">
+           <img src="images/images/irish-breakfast.jpg"
           alt="Irish breakfast" width="350" height="300">
 	   		</figure>
-	   		</figure>
-	   	</div>
+       </div>	
 	   </section>
+    <!-- And here is our main footer that is used across all the pages of our website -->
+  <div class='footer'>
+    <footer>
+        <p> &copy; <a href="https://www.dcu.ie/">DCU 2020-2021</a>
+          <span>&middot;</span>
+          <span>CA106 Group AA</span> 
+          <span>&middot;</span> 
+          <span>This is student coursework</span> 
+          <span>&middot;</span>
+          <span>Lecturer: <a href="http://www.computing.dcu.ie/~jkernan">Jane Kernan</a></span> 
+          <span>&middot;</span> 
+          <span><a href="http://validator.w3.org/check?uri=referer" title="W3C HTML Validation Service" >Valid HTML</a><br/></span> 
+      </p>
+      </footer>
+  </div>
+  </body>
 </html>
