--- a/countries/nigeria/ni_index.html
+++ b/countries/nigeria/ni_index.html
@@ -22,7 +22,7 @@
 
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -103,9 +103,9 @@
   </div>
     </nav>
 
-    <div class='header_pic'>
-	  <img src='images/pic2.jpg' class='header_image' alt='Dublin'>
-	  <div class='centered'>Our &nbsp; Cultures</div>
+   <div class='header_pic'>
+	  <img src='images/nigeriaflag.png' class='header_image' alt='Nigerian Flag'>
+	  <div class='centered'>Our &nbsp; Cultures <br> Nigeria </div>
 	 </div>
    
 
@@ -113,30 +113,42 @@
   <div class='section'>
 	<section id='Food1' class='container'>
 	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Food</h1>
+      <h1 class="text-center">Introduction To Nigeria</h1>
     <div class="row ">
     <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
+    <p>The west African country, Nigeria, is a multicultural country with a huge population of around 200 million and over 350 unique tribes. It is a West African country. It is located on the western coast of Africa, with neighbouring countries such as Benin, Niger and Cameroon. The diversity in Nigeria is unimaginable. Nigeria is one of the most linguistically diverse countries in the world! There are over 500 different languages spoken, however the official language is English. There are also many different religions practiced in Nigeria, the most popular being Islam and Christianity.
     </p>
     </div>
-    <img src='images/food1.jpg' alt='Ireland' class='images col-md-5'>
+    <img src='images/nigeria002.jpeg' alt='Ireland' class='images col-md-5'>
     </div>
     </div>
      </section>
   </div>
-    	<section id='Food2' class='container'>
-	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Estonia</h1>
-    <div class="row">
-    <img src='images/food2.jpg' alt='Food2' class='images col-md-5'>
-    <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
-    </p>
-    </div>
-    
-    </div>
-    </div>
-     </section>
+
+<section class='container'>
+<div class="container content border border-1 border-dark">
+
+<h1>Learn Fun Facts About Nigeria!</h1>
+
+<h3>Bellow is a video on 15 Interesting Facts About Nigeria</h3>
+<br>
+
+<iframe class='pr' src="https://www.youtube.com/embed/IN0N33KVb1Q" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+</div>
+</section>
+
+<div class='section'>
+<section class='container'>
+<div class="container content border border-1 border-dark">
+<h2>The National Anthem</h2>
+<div class='text col-md-10 text-center'>
+<br>
+<iframe src="https://www.youtube.com/embed/avPeagYhbgo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  </div>
+	</section>
+  </div>
 
     <!-- And here is our main footer that is used across all the pages of our website -->
   <div class='footer'>
@@ -149,6 +161,8 @@
           <span>&middot;</span>
           <span>Lecturer: <a href="http://www.computing.dcu.ie/~jkernan">Jane Kernan</a></span> 
           <span>&middot;</span> 
+          <span><a href="../../contact_us.html" >Contact Us</a></span>
+          <span>&middot;</span>
           <span><a href="http://validator.w3.org/check?uri=referer" title="W3C HTML Validation Service" >Valid HTML</a><br/></span> 
       </p>
       </footer>
