--- a/countries/romania/ro_clothes.html
+++ b/countries/romania/ro_clothes.html
@@ -22,7 +22,7 @@
 
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -105,7 +105,8 @@
 
     <div class='header_pic'>
 	  <img src='images/ro.jpg' class='header_image' alt='Dublin'>
-	  <div class='centered'>Romania</div>
+	  <div class='centered'>Romania <br>
+    Clothes and Dances</div>
 	 </div>
    
 
@@ -116,10 +117,13 @@
       <h1 class="text-center">Clothing</h1>
     <div class="row ">
     <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
-    </p>
+    <p>Traditional Romanian clothing, known as the popular costume (costume populare in Romanian), originates as far back as the Thracian/Dacian/Getae ancestry of Romanians. They can be seen engraved in Trajan’s Column (mentioned previously). </p> <br> <br>
+    
+    <p>Due to the massive geographical size of Romania, the traditional clothing varies from region to region, however, commonalities can be found across all regions. Romanian traditional clothing has remained relatively unchanged throughout history and continues to be worn at traditional celebrations today (akin to Irish dancing costumes). </p> <br> <br>
+
+      <p> The traditional clothing is typically associated with celebrations of traditional music and dancing. These clothings tend to be quite colourful despite their old age.</p>
     </div>
-    <img src='images/food1.jpg' alt='Ireland' class='images col-md-5'>
+    <img src='images/clothes.jpg' title="Romanian Clothes" alt='Clothes' class='images col-md-5'>
     </div>
     </div>
      </section>
@@ -128,10 +132,11 @@
 	   <div class="container content border border-1 border-dark">
       <h1 class="text-center">Dances</h1>
     <div class="row">
-    <img src='images/food2.jpg' alt='Food2' class='images col-md-5'>
+    <img src='images/hora-romania.jpg' title="Romanian traditional dance" alt='Romanian traditional dance' class='images col-md-5'>
     <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
-    </p>
+    <p>Romanian traditional dances remain popular today and are very popularly danced at Romanian celebrations such as weddings. </p> <br> <br> <ul> <li>The most popular dance is: </ul>
+<p>Hora - This is a form of circle dancing which can be done in very large groups. It originates in the balkans however, the name is Romanian due to it being so widespread in Romania today. In the hora, dancers take each others’ hands and the group spins in a circle, often counterclockwise, as each participant follows a sequence of three steps forward and one step back. The dance is usually accompanied by traditional music. </p>
+
     </div>
     
     </div>
@@ -149,6 +154,8 @@
           <span>&middot;</span>
           <span>Lecturer: <a href="http://www.computing.dcu.ie/~jkernan">Jane Kernan</a></span> 
           <span>&middot;</span> 
+          <span><a href="../../contact_us.html" >Contact Us</a></span>
+          <span>&middot;</span>
           <span><a href="http://validator.w3.org/check?uri=referer" title="W3C HTML Validation Service" >Valid HTML</a><br/></span> 
       </p>
       </footer>
