--- a/countries/romania/ro_index.html
+++ b/countries/romania/ro_index.html
@@ -22,7 +22,7 @@
 
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="../../index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -73,7 +73,7 @@
       <li><a class="dropdown-item" href="../moldova/mo_traditions.html">Traditions/Customs</a></li>
       <li><a class="dropdown-item" href="../moldova/mo_clothes.html">Clothing/Dances</a></li>
       <li><a class="dropdown-item" href="../moldova/mo_food.html">Food</a></li>
-    </ul>
+    </ul> 
   </div>
   <div class="dropdown">
     <button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton5"
@@ -105,38 +105,31 @@
 
     <div class='header_pic'>
 	  <img src='images/ro.jpg' class='header_image' alt='Dublin'>
-	  <div class='centered'>Romania</div>
+	  <div class='centered'>Our &nbsp; Cultures <br>
+    Romania</div>
 	 </div>
    
 
-   
+   <img src='images/romania-map.jpg' title="Romania Map" alt="Romania Map" class='images img-fluid center '>
   <div class='section'>
-	<section id='Food1' class='container'>
+	<section id='Romania' class='container'>
 	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Food</h1>
+      <h1 class="text-center">Romania</h1>
     <div class="row ">
-    <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
+    <div class='text text-center'>
+    <p>Romania is a country in southeastern Europe. <br> <br>
+    <ul> <li> The name ‘Romania’ comes from the colloquial “român” (pronounced Rom - un), which comes from the Latin “romanus”, meaning a person of Rome. </ul> <br><br> Today, the capital of Romania is Bucharest. Romania is a country with a rich history revolving heavily around military conquests and warfare (primarily being the victim of such invasions). 
+<br> <br>
+<p>
+Romania was ruled by a communist dictatorship from 1950 until a revolution in 1989, which saw the dictator of 24 years, Nicolae Ceaușescu, angrily overthrown. To this day, very few Romanians trust the government. 
+
     </p>
     </div>
-    <img src='images/food1.jpg' alt='Ireland' class='images col-md-5'>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/kqYCLYCQ2vs?autoplay=1&mute=0" title="Romanian National Anthem" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     </div>
      </section>
   </div>
-    	<section id='Food2' class='container'>
-	   <div class="container content border border-1 border-dark">
-      <h1 class="text-center">Estonia</h1>
-    <div class="row">
-    <img src='images/food2.jpg' alt='Food2' class='images col-md-5'>
-    <div class='text col-md-6 text-center'>
-    <p>FOOD TEXT
-    </p>
-    </div>
-    
-    </div>
-    </div>
-     </section>
 
     <!-- And here is our main footer that is used across all the pages of our website -->
   <div class='footer'>
@@ -149,6 +142,8 @@
           <span>&middot;</span>
           <span>Lecturer: <a href="http://www.computing.dcu.ie/~jkernan">Jane Kernan</a></span> 
           <span>&middot;</span> 
+          <span><a href="../../contact_us.html" >Contact Us</a></span>
+          <span>&middot;</span>
           <span><a href="http://validator.w3.org/check?uri=referer" title="W3C HTML Validation Service" >Valid HTML</a><br/></span> 
       </p>
       </footer>
