--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!-- Here is our main header that is used across all the pages of our website -->
 	<nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center fixed-top" style="background-size: cover;">
 		<ul class="navbar-nav my-2"></ul>
-		<a type="button" class="btn btn-outline-dark mx-2 px-3" href="index.html">Home</a>
+		<a class="btn btn-outline-dark mx-2 px-3" href="index.html">Home</a>
 		<div class="dropdown">
 			<button class="btn btn-outline-dark mx-2 px-3 dropdown-toggle" type="button" id="dropdownMenuButton1"
       data-bs-toggle="dropdown" aria-expanded="false">
@@ -109,6 +109,16 @@
 	 </div>
    
 
+	<section class='container'>
+	   <div class="container content border border-1 border-dark">
+      <h1 class="text-center">Who we are</h1>
+    <div class='text col-md-10 text-center'>
+    <h4> We are 6 very creative students with a passion for web design who want to show the rest of the world the most beautiful traditions and customs our ethnic cultures have to offer.</h4>
+    <p>As our group is very diverse with completely different backgrounds we used our html and css skills and our passion for Computer Science to beautifully design and present our ethnic cultural backgrounds. </p>
+    </div>
+    </div>
+    </section>
+
    
   <div class='section'>
 	<section id='Ireland' class='container'>
@@ -133,7 +143,7 @@
     <div class="row">
     <img src='images/estonia.jpg' alt='Estonia' class='images col-md-5'>
     <div class='text col-md-6 text-center'>
-    <p>Located in north eastern Europe, Estonia has a population of around 1.3 million people. The official language is Estonian, however most people speak at least one other language as well. English and Russian would be most common but so too would be Finnish and Swedish. As part of the European Union the currency used is Euro and minimum wage is just €3.48/hr. 68% of people in Estonia are not religious.
+    <p>Located in northern Europe, Estonia has a population of around 1.3 million people. The official language is Estonian, however most people speak at least one other language as well. English and Russian would be most common but so too would be Finnish and Swedish. As part of the European Union the currency used is Euro and minimum wage is just €3.48/hr. 68% of people in Estonia are not religious.
     </p>
     </div>
     
@@ -176,7 +186,7 @@
       <h1 class="text-center">Nigeria</h1>
     <div class="row ">
     <div class='text col-md-6 text-center'>
-    <p>Nigeria is a West African country. It is located in western coast of Africa, with neighbouring countries such as Benin, Niger, Chad and Cameroon. It is a multicultural country with a huge population of around 200 million and over 350 unique tribes. Nigeria is one of the most linguistically diverse countries in the world! There are over 500 different languages spoken, however the official language is English. There are also many different religions practiced in Nigeria, the most popular being Islam and Christianity.
+    <p>Nigeria is a West African country. It is located in the western coast of Africa, with neighbouring countries such as Benin, Niger and Cameroon. It is a multicultural country with a huge population of around 200 million and over 350 unique tribes. Nigeria is one of the most linguistically diverse countries in the world! There are over 500 different languages spoken, however the official language is English. There are also many different religions practiced in Nigeria, the most popular being Islam and Christianity.
     </p>
     </div>
     
@@ -211,6 +221,8 @@
           <span>This is student coursework</span> 
           <span>&middot;</span>
           <span>Lecturer: <a href="http://www.computing.dcu.ie/~jkernan">Jane Kernan</a></span> 
+          <span>&middot;</span>
+          <span><a href="contact_us.html" >Contact Us</a></span>
           <span>&middot;</span> 
           <span><a href="http://validator.w3.org/check?uri=referer" title="W3C HTML Validation Service" >Valid HTML</a><br/></span> 
       </p>
